--- a/www/style.css
+++ b/www/style.css
@@ -1,6 +1,6 @@
 html{
-    height: 98%;
-    width: auto;
+   height: 98%; 
+   background-image: url('./img/background.png');
 }
 
 body{
@@ -51,9 +51,59 @@ h1{
 }
 
 .right-bar-button:hover{
-    border-width: 5.5px;
+    border-width: 6px;
 }
 
 .right-bar-button h3{
     font-size: 30px;
+}
+
+.selected{
+    border-width: 4.5px;
+    transition: border-width 0.09s linear;
+}
+
+#main{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+}
+
+#question{
+    font-size: 30px;
+    margin: 0;
+}
+
+#branch{
+    margin-top: 10px;
+    color: #AFAFAF;
+}
+
+#main-textarea{
+    resize: none;
+    width: 600px;
+    height: 400px;
+    outline: none;
+    border: 2px solid #AFAFAF;
+    border-radius: 5px;
+    font-size: 15px;
+}
+
+#main-submit{
+    margin-top: 15px;
+    background-color: white;
+    font-size: 20px;
+    border: none;
+    border-bottom: 0px solid black;
+    font-family: 'Roboto Slab', serif;
+    transition: all 0.13s linear;
+    padding: 1px;
+    cursor: pointer;
+}
+
+#main-submit:hover{
+    border-width: 5px;
+    margin-top: 10px;
 }
