--- a/www/style.css
+++ b/www/style.css
@@ -15,6 +15,7 @@ body{
 h1{
     font-family: 'Mochiy Pop One', sans-serif;
     margin: 0;
+    font-size: 30px;
 }
 
 #container{
@@ -29,7 +30,7 @@ h1{
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    width: 15%;
+    width:fit-content;
 }
 
 #right-bar{
@@ -91,7 +92,7 @@ h1{
     font-size: 15px;
 }
 
-#main-submit{
+button{
     margin-top: 15px;
     background-color: white;
     font-size: 20px;
@@ -103,7 +104,36 @@ h1{
     cursor: pointer;
 }
 
-#main-submit:hover{
+button:hover{
     border-width: 5px;
     margin-top: 10px;
+}
+
+button:disabled{
+    display:none;
+}
+
+#user-panel{
+    width: 100%;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+}
+
+#user-img{
+    width: 100%;
+    display: flex;
+    align-items: center;
+    margin-top: 50px;
+    margin-bottom:5px;
+}
+
+#user-panel button{
+    margin: 0;
+    margin-top: 20px
+}
+
+#user-img img{
+    border-radius: 50%;
+    margin: auto;
 }
