--- a/www/style.css
+++ b/www/style.css
@@ -22,6 +22,7 @@ h1{
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    align-items: center;
 
     height: 100%;
 }
@@ -31,13 +32,17 @@ h1{
     flex-direction: column;
     justify-content: space-between;
     width:fit-content;
+    height: 100%;
+    padding-right: 30px;
 }
 
 #right-bar{
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    width: 10%;
+    width: 15%;
+    margin-right: 0;
+    transform: translateX(7%);
 }
 
 .right-bar-button{
@@ -93,31 +98,38 @@ h1{
 }
 
 button{
+    margin: 0;
     margin-top: 15px;
-    background-color: white;
-    font-size: 20px;
+
     border: none;
     border-bottom: 0px solid black;
-    font-family: 'Roboto Slab', serif;
+
+    background-color: transparent;
+
     transition: all 0.13s linear;
-    padding: 1px;
+
+    font-size: 20px;
+    font-family: 'Roboto Slab', serif;
+
     cursor: pointer;
 }
 
 button:hover{
-    border-width: 5px;
     margin-top: 10px;
+    border-width: 5px;
 }
 
 button:disabled{
     display:none;
 }
-
 #user-panel{
     width: 100%;
     display: flex;
     align-items: center;
+    justify-content: center;
     flex-direction: column;
+    height: 100%;
+    transform: translateY(-8%);
 }
 
 #user-img{
@@ -136,4 +148,13 @@ button:disabled{
 #user-img img{
     border-radius: 50%;
     margin: auto;
+}
+
+.vertical-separator
+{
+    background-color: #AFAFAF;
+    width: 3px;
+    height: 90%;
+
+    margin: 2px;
 }
