--- a/www/public/global.css
+++ b/www/public/global.css
@@ -11,6 +11,8 @@ body {
 	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
 
 	background-image: url('./background.svg');
+
+	user-select: none;
 }
 
 a {
