--- a/www/public/global.css
+++ b/www/public/global.css
@@ -8,7 +8,6 @@ body {
 	color: #333;
 	margin: 0;
 	box-sizing: border-box;
-	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
 
 	background-image: url('./background.svg');
 
@@ -35,7 +34,7 @@ label {
 }
 
 input, button, select, textarea {
-	font-family: inherit;
+	font-family: 'Nunito';
 	font-size: inherit;
 	-webkit-padding: 0.4em 0;
 	padding: 0.4em;
